--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,26 +1,22 @@
 /* https://hipwallpaper.com/view/NvWhsk */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shippori+Mincho+B1:wght@800&display=swap');
-
 body {
   height: 100vh;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  /* font-family: 'Shippori Mincho B1', serif; */
   background-color: white;
 }
 
-ul {
-  margin: 0;
+button:active {
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 2px;
 }
 
 li {
   list-style: none;
-  /* display: block; */
   line-height: 1.3125rem;
   border: 1.5px solid black;
-  /* width: 10%; */
-  /* padding-right: 0; */
-  /* list-style-type: circle; */
   display: inline-block;
   max-width: 50%;
   word-break: break-all;
@@ -30,23 +26,110 @@ li {
   margin: 0.1rem;
   padding: 0 0.5rem;
   box-shadow: 2px 2px 2px rgba(0, 0, 0);
+  margin-left: -1rem;
+  margin-right: 1.25rem;
 }
 
-#addTagButton {
-  margin-left: 0.5rem;
+/* 0. App.jsx */
+#nonDesktopMainHeading {
+  display: none;
+}
 
-  padding: 3px;
-  border: none;
-  background-color: #152868d2;
-  color: #fff;
-  font-weight: 600;
-  border-radius: 5px;
-  width: 1.5rem;
+#desktopMainHeading {
+  text-align: center;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+  margin: 0rem 0rem;
+  padding: 1rem 0rem;
+  margin-bottom: 0.8rem;
+  background-color: whitesmoke;
+  border-radius: 0.5rem;
+  border-radius: 0rem 0rem 0.5rem 0.5rem;
+}
+
+#grid {
+  display: grid;
+  grid-template-areas:
+    'tags form'
+    'tags notes';
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 4fr;
+}
+
+.footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 0.5rem 0;
+  margin: 0;
+  margin-top: 0.5rem;
+  border-radius: 0.5rem 0.5rem 0rem 0rem;
+}
+
+/* 1. NewNoteForm.jsx */
+#form {
+  grid-area: form;
+  margin-bottom: 1rem;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0);
+
+  background-size: 42px 42px;
+  background-size: 42px 42px;
+
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+#inputTitle {
+  border: 0;
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+#inputTag {
+  border: 0;
+  border-bottom: 1px solid black;
+  margin-bottom: 0rem;
+  width: 100%;
+}
+
+#inputTitle,
+#inputTag,
+#textareaContent {
+  outline: none;
+}
+
+label {
+  padding-left: 1.5rem;
+  display: block;
 }
 
 #addTagButton:hover,
-#tagRemoveButton:hover {
+#tagRemoveButton:hover,
+#submitButton:hover {
   scale: 1.1;
+  background-color: rgb(173, 173, 173);
+}
+
+#addTagButton {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-left: 0rem;
+
+  padding-top: 0.1rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.4rem;
+  padding-right: 1.3rem;
+  border: none;
+  color: black;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  width: 1.5rem;
+  border: 2px solid black;
+  background-color: whitesmoke;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0);
 }
 
 #tagRemoveButton {
@@ -57,171 +140,91 @@ li {
   margin-left: 0.2rem;
 }
 
-/* .individualNote{
-  grid-column: auto;
-  display: inline;
-  border: 1px solid black;
-  padding: 10px;
-  margin: 5px;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.836);
-  background-color: rgb(250, 255, 205);
-} */
-
-#form {
-  /* font-family: 'Roboto', serif; */
-  grid-area: form;
-  margin-bottom: 1rem;
-  /* background-color: white; */
-  border: 1px solid black;
-  box-shadow: 3px 3px 6px rgba(0, 0, 0);
-
-  background-size: 42px 42px;
-  background-size: 42px 42px;
-  /* background-size: 80.00px 80.00px; */
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
-  /* min-width: 500px; */
-  padding: 1rem;
+.inputTagSectionGrid {
+  display: grid;
+  grid-template-columns: minmax(95.5%, 95.5%) 1fr;
 }
 
-#newNoteTitle {
-  margin: 0px;
-  padding-left: 1.5rem;
-  padding-bottom: 0.8rem;
-  text-align: center;
-  /* text-decoration: underline; */
-  /* border-width: 5rem; */
+ul {
+  margin-left: 0;
+  margin-top: 0.5rem;
 }
 
-label {
-  padding-left: 1.5rem;
-  display: block;
-}
-
-#formTitle,
-#formTag {
-  line-height: 0.1rem;
-  height: 20px;
-  font-size: 1.15rem;
-  /* display: inline; */
-}
-
-#formContent {
-  display: block;
-  font-size: 1.15rem;
-}
-
+textarea,
 input[type='text'] {
-  /* height: 0.7rem; */
-  /* padding: 10px; */
-  /* margin: 10px 0; */
-  border: 0;
-  border-bottom: 1px solid black;
-  /* padding: 10px; */
-  /* border-radius: 10px; */
-}
-
-#inputTitle {
-  /* size: 66; */
-  /* min-width: 24.6rem; */
-  width: 57vw;
-}
-
-#inputTag {
-  min-width: 57vw;
+  font-family: Arial;
+  font-size: 1.2rem;
 }
 
 #textareaContent {
-  /* min-width: 60vw; */
-  width: 65vw;
+  width: 100%;
   border: 0;
   border-bottom: 1px solid black;
 }
 
-textarea {
-  height: 2.3rem;
-}
-
 #submitButton {
-  margin-left: 1.3rem;
+  margin-left: 1.5rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
 
   padding: 3px;
-  border: none;
-  background-color: #152868d2;
-  color: #fff;
+  color: black;
   font-weight: 600;
   border-radius: 5px;
   width: 5rem;
-  box-shadow: 3px 3px 6px rgba(0, 0, 0);
+
+  border: 2px solid black;
+  background-color: whitesmoke;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0);
 }
 
-#submitButton:hover {
-  scale: 1.1;
-}
-
+/* 2. Tags.jsx */
 #tags {
   grid-area: tags;
-
   margin-right: 0.8rem;
-  padding-left: 0.4rem;
-
-  border: 1px solid black;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
   box-shadow: 3px 3px 6px rgba(0, 0, 0);
-  background-color: whitesmoke;
-  /* height: 200px;
-  min-height: 190px; */
+  background-color: white;
   padding-bottom: 1rem;
+  border-radius: 0.5rem;
 }
 
 #individualTag {
   display: inline;
 }
 
+#allTagButton:hover,
+#individualTagButton:hover,
+#filteredTagButton:hover {
+  scale: 1.1;
+  background-color: rgb(173, 173, 173);
+}
+
 #allTagButton,
 #individualTagButton,
 #filteredTagButton {
   border: 2.5px solid black;
-  background-color: white;
+  background-color: whitesmoke;
   margin: 0.1rem;
   font-weight: bold;
   box-shadow: 1px 2px 1px;
 }
 
-#allTagButton:hover,
-#individualTagButton:hover,
-#filteredTagButton:hover {
-  scale: 1.1;
-}
-
+/* 3. Notes.jsx */
 #notes {
-  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
   grid-area: notes;
-  /* grid-column: 2 / 2; */
-  /* display: flex;  
-  flex-wrap: wrap; */
   background-image: url('../img/corkboard.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
-  border: 1px solid black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0);
+  border-radius: 0.5rem;
 }
 
 #notes-container {
   display: flex;
   flex-wrap: wrap;
-}
-
-#grid {
-  display: grid;
-  grid-template-areas:
-    'tags form'
-    /* "tags" "notes" */
-    'tags notes';
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 4fr;
 }
 
 .individualNote {
@@ -230,18 +233,25 @@ textarea {
   border: 1px solid black;
   padding: 10px;
   margin: 5px;
-  /* min-height: 2rem;
-  max-height: 10rem; */
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.836);
   background-color: rgb(250, 255, 205);
   position: relative;
 }
 
 .individualNoteTitle {
-  /* font-weight:bolder; */
   margin-top: 0px;
   margin-bottom: 0px;
   display: inline;
+}
+
+.individualNoteDeleteButton:hover {
+  scale: 1.1;
+}
+
+.individualNoteDeleteButton:active {
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 2px;
 }
 
 .individualNoteDeleteButton {
@@ -250,12 +260,8 @@ textarea {
   border: none;
   position: absolute;
   right: -0.5rem;
-  top: -0.5rem;
+  top: -0.1rem;
   box-shadow: 3px 2px black;
-}
-
-.individualNoteDeleteButton:hover {
-  scale: 1.1;
 }
 
 .individualNoteContent {
@@ -264,66 +270,28 @@ textarea {
   font-size: medium;
 }
 
+.individualNoteTag li {
+  display: inline;
+  border: 1px solid grey;
+  padding: 0rem 0.2rem;
+  margin: 0rem 0.1rem;
+  background-color: rgb(202, 202, 202);
+}
+
 .individualNoteTag {
-  /* position: absolute;  */
   bottom: 0;
   margin-top: 0px;
   margin-bottom: 0px;
   font-size: small;
 }
 
-.individualNoteTag li {
-  display: inline;
-  border: 1px solid grey;
-  padding: 0rem 0.2rem;
-  margin: 0rem 0.1rem;
-  background-color: rgb(211, 211, 211);
-}
-
-#desktopMainHeading {
-  font-family: 'Shippori Mincho B1', serif;
-  text-align: center;
-  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
-  margin: 0rem 0rem;
-  padding: 1rem 0rem;
-  margin-bottom: 0.8rem;
-  background-color: whitesmoke;
-}
-
-#nonDesktopMainHeading {
-  display: none;
-}
-
-#formHeading {
-  margin: 0px 50px;
-  text-align: center;
-}
-
-#notesHeading {
-  height: 40px;
-}
-
-.footer {
-  /* width: 100vw; */
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding: 0.5rem 0;
-  margin: 0;
-  margin-top: 0.5rem;
-}
-
 @media screen and (orientation: portrait) and (max-width: 740px) {
-  /* body {
-    min-width: 475px;
-  } */
-
+  /* 0. App.jsx */
   #desktopMainHeading {
     display: none;
   }
 
   #nonDesktopMainHeading {
-    font-family: 'Shippori Mincho B1', serif;
     display: block;
     text-align: center;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
@@ -331,7 +299,7 @@ textarea {
     padding: 1rem 0rem;
     margin-bottom: 0.8rem;
     background-color: whitesmoke;
-    /* width: 100vw; */
+    border-radius: 0rem 0rem 0.5rem 0.5rem;
   }
 
   #grid {
@@ -345,14 +313,10 @@ textarea {
     grid-template-columns: none;
   }
 
+  /* 2. Tags.jsx */
   #tags {
     margin-bottom: 0.5rem;
     margin-right: 0;
-  }
-
-  #form {
-    /* margin-bottom: 0.5rem; */
-    /* min-width: 100vw; */
-    /* min-width: 550px; */
+    background-color: white;
   }
 }
